# tm-models

./: .gitignore  LICENSE.txt  Main.lean  README.md  TmModels.lean  lake-manifest.json  lakefile.lean  pyproject.toml
.github/workflows/: blueprint.yml
TmModels/: Defs.lean  Prelude.lean
TmModels/StateMachines/: Dfa.lean  DfaNfaEquivalence.lean  Mealy.lean  MealyEmulatesMoore.lean  Moore.lean  Nfa.lean  Pda.lean
blueprint/src/: print.tex  web.tex
diagrams/: control_cocoro.md  ktrack_kocoro.md  step_coming.md  step_going.md  step_head.md
home_page/: _config.yml
home_page/_layouts/: default.html
src/tm_models/: __about__.py
src/tm_models/oracles/: IgnorantInstrSOracle.py  InstrOracleParallelizer.py  InstrOracleSerializer.py  KInstrOracleABC.py  OracleABC.py  SInstrOracleABC.py  StdOracleABC.py
src/tm_models/tapes/: LogSTape.py  STape.py  STapeDataclass.py
src/tm_models/typing/: __init__.py
tests/: __init__.py  test_stapefuzzing.py
